--- a/css/styles.css
+++ b/css/styles.css
@@ -11444,7 +11444,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../img/assets/img/header-bg.jpg");
+  background-image: url("../img/1647567609571-0.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
