--- a/css/styles.css
+++ b/css/styles.css
@@ -1170,6 +1170,7 @@ progress {
   .col-md-4 {
     flex: 0 0 auto;
     width: 33.33333333%;
+
   }
 
   .col-md-5 {
@@ -11838,8 +11839,26 @@ section#contact form#contactForm :-ms-input-placeholder {
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+/*-------------------------------------화면에 마우스 올리면 확대 */
+@media (prefers-reduced-motion: no-preference) {
+body {
+  box-sizing: border-box;
+  font-family: Consolas, monospace;
+}
+h1 {
+  text-align: center;
+}
+img {
+  max-width: 100%;
+}
 
-
+.a img {
+transition: all 0.2s linear;
+}
+.a:hover img {
+transform: scale(3.0);
+}
+}
 
 /*------------------------------kakaomap-----------------------------------------------------------------------*/
 .wrap {position: absolute;left: 0;bottom: 40px;width: 288px;height: 132px;margin-left: -144px;text-align: left;overflow: hidden;font-size: 12px;font-family: 'Malgun Gothic', dotum, '돋움', sans-serif;line-height: 1.5;}
