--- a/css/styles.css
+++ b/css/styles.css
@@ -600,7 +600,7 @@ progress {
 }
 
 .img-fluid {
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -11304,7 +11304,7 @@ p {
 }
 
 .page-section {
-  padding: 6rem 0;
+  padding: 10rem 0;
 }
 .page-section h2.section-heading, .page-section .section-heading.h2 {
   font-size: 2.5rem;
@@ -11321,7 +11321,7 @@ p {
 
 @media (min-width: 768px) {
   section {
-    padding: 9rem 0;
+    padding: 0rem 0;
   }
 }
 .btn-xl {
@@ -11822,7 +11822,7 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 .footer {
-  text-align: left;
+  text-align: center;
   font-size: 0.9rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
